modify html and css codes

--- a/index.html
+++ b/index.html
@@ -9,45 +9,54 @@
 <body>
     <header>
         <h1>This is Negash's Proffesional portofolio</h1>
-        <h2>Name: Negash</h2>
+        <h2>Name: Negash Tseganeh</h2>
         <h2>Address: Houston, Texas,USA</h2>
         <h2>Phone number: 4092342689</h2>
         <h2>Email: negash@gmail.com</h2>
-        <img src="negash.png.jpg" height="200px" alt="Negash photo">
+        <img src="negash.png.jpg" height="200px" alt= "This is my photo" title= "Negash's photo in office">
         <h2>Excutive Summary</h2>
-        <p id="box1">
+        <p class="card">
             I am Negash Tseganeh, an experienced website developer. I am familiar with html codes, preparing semantic html files, how to link 
             with css and making my website more accessible and user friendly. I have also hands on experince on how to decore my html with css codes.
             I was working on using css variables, flexboxes and animations.
             I am also familiar with javascript and java codes. I work on declaring variables, data types and functions in java.
             I know how to declare function and function expression.
+            I am a competeive professioanl who can work under strech in busy work sutuations. I can handle priorities and I able to meet the deadlines in the work. 
+            I am energetic, dedicated professional who can be an asset to your company.
         </p>
-        <nav>
+        <nav class="card">
             <h3>List of links of self developed websites</h3>
             <ul>
                 <li>
-                    <a href="https://negatseg.github.io/Class-Work-Website/">my class work wesite target=blank</a>
+                    <a href="https://negatseg.github.io/Class-Work-Website/" target=_blank title="this will take to my classwork webpage">https://negatseg.github.io/class-work-website/
+                    </a>
                 </li>
                 <li>
-                    <a href="https://negatseg.github.io/urban-octo-telegram/"> my assignment website target=blank</a>
+                    <a href="https://negatseg.github.io/urban-octo-telegram/" target=_blank title="this will take you to my assignment webpage">https://negatseg.github.io/urban-octo-telegram/
+                    </a>
+                </li>
+                <li>
+                    <a href="https://negatseg.github.io/prework-study-guide/" target=_blank title="this will take you to my prework webpage">https://negatseg.github.io/prework-study-guide/
+                    </a>
                 </li>
             </ul>
         </nav>
     </header>
+    <br>
     <main>
-        <div class="card">
+        <div id ="skills" class="card">
             <figure>
                 <h3>
-                    Skills
+                    Skills 
                 </h3>
-                <div class="content">
+                <div>
                     <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>JAVA</li>
-                        <li>Javascript</li>
-                        <li>.Net</li>
-                        <li>Mulesoft</li>
+                    <li>HTML</li>
+                    <li>CSS</li>
+                    <li>JAVA</li>
+                    <li>Javascript</li>
+                    <li>.Net</li>
+                    <li>Mulesoft</li>
                     </ul>
                 </div>
             </figure>
@@ -68,7 +77,7 @@
                 </div>
             </figure>
         </div>
-        <div class="card">
+        <div class="strongside card">
             <figure>
                 <h3>
                     My Strong side
@@ -84,6 +93,7 @@
                 </div>
             </figure>
         </div>
+        <br>
         <div class="card">
             <figure>
                 <h3>
@@ -99,7 +109,7 @@
         </div>
     </main>
     <footer>
-        <div class="card">
+        <div>
             <figure>
                 <h3>
                     Refernces
@@ -114,6 +124,7 @@
                         <li>name: Gopal Alex</li>
                         <li>phone :78654358927</li>
                         <li>email:refernce2@gmail.com</li>
+                        <h4>Thank you for visiting my webpage!</h4>
                     </ul>
                 </div>
             </figure>
