update the webpage link in html

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <h3>List of links of self developed websites</h3>
             <ul>
                 <li>
-                    <a href="https://negatseg.github.io/Class-Work-Website/" target=_blank title="this will take to my classwork webpage">https://negatseg.github.io/class-work-website/
+                    <a href="https://negatseg.github.io/class-work-website/" target=_blank title="this will take to my classwork webpage">https://negatseg.github.io/class-work-website/
                     </a>
                 </li>
                 <li>
